# hw1

./: Makefile  README.md  hw1.cabal  stack.yaml
src/: Hw1.hs  Hw2.hs
